moshi-ir/moshi-compiler-plugin/testData/diagnostic/NonPropertyConstructorParameter.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

package test

import com.squareup.moshi.JsonClass

<!MOSHI_ERROR!>@JsonClass(generateAdapter = true)
class NonPropertyConstructorParameter(a: Int, val b: Int)<!>
